--- a/package.json
+++ b/package.json
@@ -7,6 +7,10 @@
   "dependencies": {
     "@slack/web-api": "^6.0.0",
     "dotenv": "^8.2.0",
-    "express": "^4.17.1"
+    "express": "^4.17.1",
+    "mongoose": "^5.11.19"
+  },
+  "scripts": {
+    "dev": "nodemon app.js"
   }
 }
