--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "mongoose": "^5.11.19"
   },
   "scripts": {
-    "dev": "nodemon app.js"
+    "dev": "nodemon app.js",
+    "start": "node app.js"
   }
 }
